Fix pre block wrapping

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -36,6 +36,7 @@ pre {
   background-color: #333333;
   border: none;
   border-radius: 0;
+  word-wrap: normal;
 }
 
 code {
